testsuite/tests/typing-layouts-products/parsing_unary_type.compilers.reference
File "parsing_unary_type.ml", line 11, characters 14-15:
11 | type t = #(int)
                   ^
Error: Syntax error
